--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,50 +15,89 @@
   <![endif]-->
 </head>
 
-  <body>
+<body>
+  <nav class="navigation">
+    <ul>
+      <li class="nav-item">Services</li>
+      <li class="nav-item">Product</li>
+      <li class="nav-item">Vision</li>
+      <li class="nav-item">Features</li>
+      <li class="nav-item">About</li>
+      <li class="nav-item">Contact</li>
+      <li class="nav-item"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></li>
+    </ul>
+  </nav>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+  <header class="main-header">
+    <div class="header-left">
+      <h1>
+        Innovation<br>
+        On<br>
+        Demand
+      </h1>
+      <button>
+        Get Started
+      </button>
+    </div>
+    <div class="header-right">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  </header>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
-
-  Get Started
-
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section class="section-box">
+    <div class="sub-section">
+      <h2> Features</h2>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+    <div class="sub-section">
+      <h2>About </h2>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+  </section>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section class="section-box">
+    <div class="sub-section">
+      <h2>Services</h2>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+    <div class="sub-section">
+      <h2> Product</h2>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </div>
+    <div class="sub-section">
+      <h2>Vision </h2>
+      Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+    </div>
+  </section>
 
-  Copyright Great Idea! 2018
-  
-  </body>
+  <hr>
+
+  <footer>
+    <address>
+      <h2>Contact </h2>
+      <p>123 Way 456 Street</p>
+      <p>Somewhere, USA</p><br>
+      <p> 1 (888) 888-8888</p><br>
+      <p>sales@greatidea.io</p>
+    </address>
+
+    <div class="copyright-text">
+      <p>Copyright Great Idea! 2018</p>
+    </div>
+
+  </footer>
+
+
+</body>
+
 </html>
