--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -35,7 +35,7 @@
         On<br>
         Demand
       </h1>
-      <button>
+      <button class="header-button">
         Get Started
       </button>
     </div>
@@ -60,19 +60,19 @@
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
 
-  <section class="section-box">
-    <div class="sub-section">
+  <section class="section-box-sec">
+    <div class="sub-section-sec">
       <h2>Services</h2>
       Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
       Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
     </div>
-    <div class="sub-section">
+    <div class="sub-section-sec">
       <h2> Product</h2>
       Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
       Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
     </div>
-    <div class="sub-section">
+    <div class="sub-section-sec">
       <h2>Vision </h2>
       Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
       Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
@@ -80,7 +80,7 @@
     </div>
   </section>
 
-  <hr>
+
 
   <footer>
     <address>
